# Vuelos_Bot

./: .gitignore  README.md  main.py  pyproject.toml
init/: .gitignore  pyproject.toml
init/notebooks/: Principal.ipynb
init/src/: Funcionamiento.py  configuracion.py  skycanner_bot.py
src/: Crear.py  __init__.py  notifiaciones.py
